--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -4,11 +4,11 @@
 $palette: (
 	light: (
 		1: #ECEDED,
-		2: #9CA9B3,
+		2: #4d0352,
 		3: #717D86
 	),
 	dark: (
-		1: #151719,
+		1: #28f4ff,
 		2: #25282C,
 		3: #33363A
 	),
