--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -3,18 +3,18 @@
 // The color palette
 $palette: (
 	light: (
-		1: #ECEDED,
+		1: #4efefe,
 		2: #ffffff,
-		3: #64acff
+		3: #8aefff
 	),
 	dark: (
-		1: #28f4ff,
+		1: #00282f,
 		2: #25282C,
 		3: #33363A
 	),
 	primary: (
-		1: #6163FF,
-		2: #ACADFF,
+		1: #61ffc8,
+		2: #765f8e,
 		3: #5658DD,
 		4: #9afff8
  	),
