--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -8,7 +8,7 @@ $palette: (
 		3: #8aefff
 	),
 	dark: (
-		1: #00282f,
+		1: #00191d,
 		2: #25282C,
 		3: #33363A
 	),
@@ -16,11 +16,11 @@ $palette: (
 		1: #61ffc8,
 		2: #765f8e,
 		3: #5658DD,
-		4: #9afff8
+		4: #ffffff
  	),
 	secondary: (
 		1: #24E5AF,
-		2: #73EFCC,
+		2: #076349,
 		3: #1CB68B,
 		4: #D2F9EE
 	),
