--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -3,7 +3,7 @@
 // The color palette
 $palette: (
 	light: (
-		1: #000000,
+		1: #ffffff,
 		2: #686161,
 		3: #8aefff
 	),
@@ -13,8 +13,8 @@ $palette: (
 		3: #33363A
 	),
 	primary: (
-		1: #00c7b3,
-		2: #00c7b3,
+		1: #302a6c,
+		2: #302a6c,
 		3: #7f3dd6,
 		4: #ffffff
  	),
