--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -10,12 +10,12 @@ $palette: (
 	dark: (
 		1: #001d07,
 		2: #6f0dac,
-		3: #5c5c5c
+		3: #4b4b4b
 	),
 	primary: (
 		1: #302a6c,
 		2: #302a6c,
-		3: #7f3dd6,
+		3: #343434,
 		4: #ffffff
  	),
 	secondary: (
