--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -4,7 +4,7 @@
 $palette: (
 	light: (
 		1: #ffffff,
-		2: #686161,
+		2: #807f7f,
 		3: #8aefff
 	),
 	dark: (
@@ -19,8 +19,8 @@ $palette: (
 		4: #ffffff
  	),
 	secondary: (
-		1: #ce24e5,
-		2: #076349,
+		1: rgb(83, 83, 83),
+		2: #212121,
 		3: #6668d9,
 		4: #6c43b3
 	),
