--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -13,8 +13,8 @@ $palette: (
 		3: #4b4b4b
 	),
 	primary: (
-		1: #302a6c,
-		2: #302a6c,
+		1: #4b2f76,
+		2: #4b2f76,
 		3: #343434,
 		4: #ffffff
  	),
